--- a/Auto typing/index.html
+++ b/Auto typing/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>I'm a <span></span></h1>
-  <h1>I'm a <span></span></h1>
-  <h1>I'm a <span></span></h1>
+  <!-- <h1>I'm a <span></span></h1>
+  <h1>I'm a <span></span></h1> -->
 </body>
 </html>
